--- a/flower.html
+++ b/flower.html
@@ -15,7 +15,9 @@
   <div id="lyrics">
 
   </div>
-  
+   <button class="botones">
+        <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+    </button>
 
   <div class="night"></div>
   <div class="flowers">
