--- a/flower.html
+++ b/flower.html
@@ -16,7 +16,7 @@
 
   </div>
    <button class="botones">
-        <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+        <a href="valentine-day-main/index.html" style="color: #fff;">CLICK AQUÍ</a>
     </button>
 
   <div class="night"></div>
